[workspace]
resolver = "2"
members = ["crates/core", "crates/orchestrator", "crates/scanners", "crates/reporter", "crates/tips", "crates/server", "src-tauri"]
default-members = ["crates/core", "crates/orchestrator", "crates/scanners", "crates/reporter", "crates/tips", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive", "env"] }
audit-core = { path = "crates/core" }
audit-orchestrator = { path = "crates/orchestrator" }
audit-scanners = { path = "crates/scanners" }
audit-reporter = { path = "crates/reporter" }
audit-tips = { path = "crates/tips" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
