[package]
name = "audit-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
audit-core.workspace = true
audit-scanners.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
