[package]
name = "audit-scanners"
version.workspace = true
edition.workspace = true

[dependencies]
audit-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "fs"] }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
which.workspace = true
regex.workspace = true
chrono.workspace = true
