[package]
name = "audit-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "audit-server"
path = "src/main.rs"

[dependencies]
audit-core.workspace = true
audit-orchestrator.workspace = true
audit-reporter.workspace = true
audit-tips.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
clap.workspace = true
